src/test/test-models/bad/err-no-statement.stan
transformed data {
  real x;
  if (1) 
}
model {
}
